[package]
name = "windows_rs_enum_windows"
version = "0.1.0"
edition = "2024"

[dependencies.windows]
version = "0.58"
features = [
    "Win32_Foundation",
    "Win32_Graphics_Gdi",
    "Win32_System_Threading",
    "Win32_UI_WindowsAndMessaging",
    "Win32_System_ProcessStatus",
    "Win32_System_LibraryLoader",
    "Win32_UI_WindowsAndMessaging",
]
